grid.header.Toolbar: limit the max-width to prevent background overflows #6198

--- a/resources/scss/src/grid/header/Toolbar.scss
+++ b/resources/scss/src/grid/header/Toolbar.scss
@@ -2,4 +2,5 @@
     border-bottom: 2px solid var(--grid-container-border-color);
     border-top   : 1px solid var(--grid-container-border-color);
     padding      : 0;
+    width        : max-content;
 }
